[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=2]
[ext_resource path="res://Scripts/DebugHelper.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Hotbar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Hotbar.gd" type="Script" id=5]
[ext_resource path="res://crossbar.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Inventory.gd" type="Script" id=7]

[sub_resource type="CylinderShape" id=1]
radius = 0.4
height = 1.9

[node name="Player" type="KinematicBody"]
input_ray_pickable = false
collision_layer = 3
collision/safe_margin = 0.005
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )
current = true
far = 400.0
script = ExtResource( 2 )

[node name="DebugHelper" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 3 )

[node name="BreakTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="CamZoom" type="Tween" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Hotbar" parent="HUD" instance=ExtResource( 4 )]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
stretch_mode = 3

[node name="Inventory" type="Node" parent="."]
script = ExtResource( 7 )

[connection signal="timeout" from="BreakTimer" to="." method="_on_BreakTimer_timeout"]
[connection signal="changed_selected_slot" from="Inventory" to="HUD/Hotbar" method="_on_Inventory_changed_selected_slot"]
[connection signal="slot_updated" from="Inventory" to="HUD/Hotbar" method="_on_Inventory_slot_updated"]
